--- a/templates/login.html
+++ b/templates/login.html
@@ -20,5 +20,5 @@
   </p>
 </div>
 
-<script type="module" src="/static/js/pages/login.js"></script>
+<script type="module" src="/static/js/pages/auth.js"></script>
 {% endblock %}
