--- a/templates/signup.html
+++ b/templates/signup.html
@@ -4,7 +4,7 @@
   <h1 data-i18n="signup.title">✨ Create Account</h1>
   <p data-i18n="signup.subtitle">Start managing your finances today</p>
   
-  <form class="form" style="margin-top: 30px;">
+  <form id="signup-form" class="form" style="margin-top: 30px;">
     <input type="text" data-i18n="signup.name.placeholder" placeholder="Full name" autocomplete="name" required />
     <input type="email" data-i18n="signup.email.placeholder" placeholder="Email" autocomplete="email" required />
     <input type="password" data-i18n="signup.password.placeholder" placeholder="Password" autocomplete="new-password" required />
@@ -17,4 +17,6 @@
     <a href="/login" style="color: var(--accent, #6c21e4); font-weight: 600;" data-i18n="signup.login">Sign in</a>
   </p>
 </div>
+
+<script type="module" src="/static/js/pages/auth.js"></script>
 {% endblock %}
